Add working ui plugin